--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="country">
                         <label>
                             <p>Country</p>
-                            <select class="select">
-                            <option value="1"></option>
+                            <select class="select" required>
+                            <option class="placeholder" value="" disabled selected hidden>Select</option>
                             <option value="2">UA</option>
                             <option value="3">USA</option>
                             </select>
@@ -94,8 +94,8 @@
                 <div class="usercountry">
                     <label class="usercountry-label">
                         <p>Country</p>
-                        <select class="select-country">
-                            <option value="1"></option>
+                        <select class="select-country" required>
+                            <option class="placeholder" value="" disabled selected hidden>Select</option>
                             <option value="2">UA</option>
                             <option value="3">USA</option>
                         </select>
