--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <section class="account">
             <form>
                 <legend>Create an acount</legend>
-                    <div class="name">
-                        <label class="label-first-name">First name <br><input class="input-first-name" type="text"></label>
+                <div class="name">
+                        <label class="label-first-name">First name<input class="input-first-name" type="text"></label>
                     </div>
                     <div class="last-name">
-                        <label class="label-last-name">Last name <br><input class="input-last-name" type="text"></label>
+                        <label class="label-last-name">Last name<input class="input-last-name" type="text"></label>
                     </div>
                     <div class="email">
-                        <label class="label-email">E-mail <br><input class="input-email" type="email"></label>
+                        <label class="label-email">E-mail<input class="input-email" type="email"></label>
                         <p>We'll never share your email with anyone else.</p>
                     </div>
                     <div class="radio-button-first">
@@ -30,22 +30,22 @@
                     </div>
                     <div class="country">
                         <label>
-                            <p>Country</p>
+                            Country
                             <select class="select" required>
-                            <option class="placeholder" value="" disabled selected hidden>Select</option>
-                            <option value="2">UA</option>
-                            <option value="3">USA</option>
+                                <option class="placeholder" value="" disabled selected hidden>Select</option>
+                                <option value="2">UA</option>
+                                <option value="3">USA</option>
                             </select>
                         </label>
                     </div>
                     <div class="city">
-                        <label class="label-city">City <br><input class="input-city" type="text"></label>
+                        <label class="label-city">City<input class="input-city" type="text"></label>
                     </div> 
                     <div class="button-sign">
                         <button class="button-accept">Sign Up</button>
                     </div>
                     <div class="links">
-                        <p>By clicking the 'Sign Up' button, you confirm that you accept our <br> <a href="#" target="_blank">Terms of Use</a>
+                        <p>By clicking the 'Sign Up' button, you confirm that you accept our<a href="#" target="_blank">Terms of Use</a>
                         and <a href="#" target="_blank">Privacy Policy</a></p>
                     </div>
                     <hr>
@@ -53,24 +53,24 @@
                         <p class="font-paragraph">Have an account?
                             <span class="font-link"><a href="#" target="_blank">Log In</a></span>
                         </p>
-                    </div>
+                </div>
             </form>
         </section>
         <section class="profile">
             <form>
                 <legend>Profile</legend>
                 <div class="photo">
-                    <img src="images/📷 Image.jpg" alt="">
+                    <img src="images/📷 Image.jpg" alt="userphoto">
                 </div>
                 <div class="input-file">
                     <input class="visually-hidden" type="file" id="file">
-                        <label for="file">
+                    <label for="file">
                             <div class="icon-input">
                                 <span class="photo-icon">
                                     <i class="fa-solid fa-camera"></i>
                                 </span>
                             </div>
-                        </label>
+                    </label>
                 </div>
                 <div class="input-file-reset">
                     <input class="visually-hidden" type="reset" id="reset">
@@ -86,14 +86,14 @@
                     <p>Up to 1 MB (300x300 px)</p>
                 </div>
                 <div class="username">
-                    <label>Name <br><input type="text"></label>
+                    <label>Name<input type="text"></label>
                 </div>
                 <div class="useremail">
-                    <label>E-mail <br><input type="email"></label>
+                    <label>E-mail<input type="email"></label>
                 </div>
                 <div class="usercountry">
                     <label class="usercountry-label">
-                        <p>Country</p>
+                        Country
                         <select class="select-country" required>
                             <option class="placeholder" value="" disabled selected hidden>Select</option>
                             <option value="2">UA</option>
@@ -102,13 +102,13 @@
                     </label>
                 </div>
                 <div class="usercity">
-                    <label>City <br><input type="text"></label>
+                    <label>City<input type="text"></label>
                 </div>
                 <div class="zipcode">
-                    <label>Zip Code <br><input type="text"></label>
+                    <label>Zip Code<input type="text"></label>
                 </div>
                 <div class="phonenumber">
-                    <label>Phone Number <br><input type="number"></label>
+                    <label>Phone Number<input type="number"></label>
                 </div>
                 <div class="button-block"> 
                     <button class="button-update">Update</button>
